# xn65

./: CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md
Xn65ContentPipeline/: Xn65ContentPipeline.sln
Xn65ContentPipeline/Xn65.ContentPipeline/: Resources.resx  SR.cs
framework/: CMakeLists.txt  default.hpp  enums.hpp  forward.hpp  helpers.hpp  timespan.hpp  types.hpp  xna.cpp  xna.h  xnaerror.hpp
framework-dx/: CMakeLists.txt  audioengine.cpp  displaymode.cpp  screen.cpp  soundeffect.cpp  texture.cpp
framework/audio/: audioengine.hpp  soundeffect.hpp
framework/common/: collision.cpp  color.cpp  color.hpp  gjk.cpp  math.cpp  math.hpp  matrix.cpp  matrix.hpp  numerics.cpp  packedvalue.cpp  packedvalue.hpp  point.hpp  quaternion.cpp  quaternion.hpp  rectangle.hpp  vectors.cpp  vectors.hpp
framework/content/: decstream.cpp  decstream.hpp  defaultreaders.hpp  manager.cpp  manager.hpp  reader.cpp  reader.hpp  typereadermanager.cpp  typereadermanager.hpp
framework/content/lzx/: decoder.cpp  decoder.hpp  decoderstream.cpp  decoderstream.hpp
framework/csharp/: binary.cpp  binary.hpp  buffer.hpp  object.cpp  object.hpp  stream.cpp  stream.hpp  timespan.hpp  type.cpp  type.hpp
framework/game/: clock.hpp  component.cpp  component.hpp  game.hpp  gdeviceinfo.hpp  gdevicemanager.hpp  servicecontainer.cpp  servicecontainer.hpp  time.hpp  window.hpp
framework/graphics/: adapter.hpp  blendstate.hpp  databuffer.hpp  depthstencilstate.hpp  device.hpp  displaymode.hpp  gresource.hpp  indexbuffer.hpp  presentparams.hpp  rasterizerstate.hpp  rendertarget.hpp  samplerstate.hpp  shader.hpp  spritebatch.hpp  spritefont.hpp  swapchain.hpp  texture.hpp  vertexbuffer.hpp  vertexinput.hpp  vertexposition.hpp  viewport.hpp
framework/input/: gamepad.hpp  keyboard.hpp  mouse.hpp
framework/pipeline/: compiler.cpp  pipeline.cpp  writer.cpp
framework/platform/: adapter-dx.cpp  adapter-dx.hpp  audioengine-dx.hpp  audioengine.dx.cpp  blendstate-dx.cpp  blendstate-dx.hpp  buffer.cpp  clock-dx.cpp  clock-dx.hpp  constbuffer-dx.cpp  constbuffer-dx.hpp  databuffer-dx.cpp  databuffer-dx.hpp  depthstencilstate-dx.cpp  depthstencilstate-dx.hpp  device-dx.cpp  device-dx.hpp  displaymode-dx.cpp  displaymode-dx.hpp  dxheaders.hpp  game-dx.cpp  game-dx.hpp  gamepad-dx.cpp  gamepad-dx.hpp  gdeviceinfo-dx.hpp  gdevicemanager-dx.cpp  gdevicemanager-dx.hpp  indexbuffer-dx.cpp  indexbuffer-dx.hpp  init-dx.cpp  init-dx.hpp  keyboard-dx.cpp  keyboard-dx.hpp  mouse-dx.cpp  mouse-dx.hpp  presentparameters-dx.cpp  presentparameters-dx.hpp  rasterizer-dx.cpp  rasterizer-dx.hpp  rasterizerstate-dx.cpp  (+24 more)
framework/platform-dx/: adapter.cpp  audioengine.cpp  blendstate.cpp  buffer.cpp  depthstencilstate.cpp  device.cpp  displaymode.cpp  effect.cpp  game.cpp  gamepad.cpp  gdevicemanager.cpp  impl.cpp  init.cpp  keyboard.cpp  mouse.cpp  rasterizerstate.cpp  rendertarget.cpp  samplerstate.cpp  screen.cpp  shader.cpp  soundeffect.cpp  sprite.cpp  swapchain.cpp  texture.cpp  window.cpp
framework/platform/content-readers/: texture2Dreader-dx.hpp
framework/platform/dx/: StepTimer.hpp
framework/sound/: audioengine.hpp  soundeffect.hpp
inc/: enums.hpp  forward.hpp  helpers.hpp  types.hpp  xna.hpp  xnaerror.hpp
inc/audio/: audioengine.hpp  soundeffect.hpp
inc/common/: collision.hpp  color.hpp  curve.hpp  gjk.hpp  math.hpp  matrix.hpp  numerics.hpp  packedvalue.hpp  point.hpp  quaternion.hpp  rectangle.hpp  vectors.hpp
inc/content/: defaultreaders.hpp  manager.hpp  reader.hpp  typereadermanager.hpp
inc/csharp/: binary.hpp  service.hpp  stream.hpp  timespan.hpp  type.hpp
inc/game/: game.hpp  gdeviceinfo.hpp  gdevicemanager.hpp  servicecontainer.hpp  window.hpp
inc/graphics/: adapter.hpp  blendstate.hpp  buffer.hpp  constbuffer.hpp  depthstencilstate.hpp  device.hpp  gresource.hpp  presentparams.hpp  rasterizerstate.hpp  rendertarget.hpp  samplerstate.hpp  shader.hpp  sprite.hpp  spritebatch.hpp  swapchain.hpp  texture.hpp  vertexbuffer.hpp  vertexposition.hpp  viewport.hpp
inc/input/: gamepad.hpp  keyboard.hpp  mouse.hpp
inc/libmspack/: lzx.h  mspack.lib
inc/platform-dx/: audioengine-dx.hpp  blendstate-dx.hpp  constbuffer-dx.hpp  depthstencilstate-dx.hpp  device-dx.hpp  dxhelpers.hpp  game-dx.hpp  gdeviceinfo-dx.hpp  gdevicemanager-dx.hpp  headers.hpp  helpers.hpp  implementations.hpp  init-dx.hpp  init.hpp  mouse-dx.hpp  rasterizerstate-dx.hpp  shader-dx.hpp  spritebatch-dx.hpp  spritefont-dx.hpp  steptimer.hpp  texture-dx.hpp  vertexbuffer-dx.hpp  vertexinput-dx.hpp  window-dx.hpp  xna-dx.hpp
inc/xna/: default.hpp  enumerations.hpp  enums.hpp  exception.hpp  forward.hpp  helpers.hpp  platforminit.hpp  types.hpp  xna-dx.hpp  xna.hpp
includes/: misc.hpp
includes/csharp/: activator.hpp  exception.hpp  service.hpp  sr.hpp  time.hpp  type.hpp
includes/pipeline/: compiler.hpp  default.hpp  enums.hpp  graphics.hpp  importer.hpp  importers.hpp  logger.hpp  pipeline.hpp  serialization.hpp  serializer.hpp  serializers.hpp  writer.hpp
includes/xna/: default.hpp  enumerations.hpp  exception.hpp  (+4 more)
includes/xna-dx/: headers.hpp  helpers.hpp  implementations.hpp  init.hpp  steptimer.hpp  xna-dx.hpp
samples/: CMakeLists.txt  xna.cpp
samples/01_blank/: CMakeLists.txt  xna.cpp
samples/02_PlatfformerStarterKit/: CMakeLists.txt  animation.cpp  animation.hpp  circle.hpp  enemy.cpp  enemy.hpp  extensions.hpp  game.cpp  gem.cpp  gem.hpp  headers.hpp  level.cpp  level.hpp  player.cpp  player.hpp  tile.hpp
sources/: CMakeLists.txt
sources/framework/: CMakeLists.txt  exception.cpp
sources/framework/common/: collision.cpp  color.cpp  gjk.cpp  numerics.cpp  packedvalue.cpp
sources/framework/content/: manager.cpp  reader.cpp  typereadermanager.cpp
sources/framework/content/lzx/: decoder.cpp
sources/framework/csharp/: binary.cpp  stream.cpp
sources/framework/game/: component.cpp  servicecontainer.cpp
sources/framework/graphics/: displaymode.cpp  gresource.cpp
sources/pipeline/: CMakeLists.txt  compiler.cpp  graphics.cpp  importer.cpp  pipeline.cpp  serialization.cpp  serializers.cpp  writer.cpp
(+176 files in other folders)
